--- a/generic.html
+++ b/generic.html
@@ -52,19 +52,31 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">May 9, 2025</span>
-										<h2><a href="https://www.laserblood.eu/pancreatic-cancer-the-three-part-series-in-summary/">Pancreatic Cancer: The Three-Part Series in Summary<br />
+									<span class="date">June 8, 2025</span>
+										<h2><a href="https://www.laserblood.eu/pancreatic-cancer-the-hidden-cost-of-late-diagnosis-and-what-early-detection-could-save/">Pancreatic Cancer: The Hidden Cost of Late Diagnosis – and What Early Detection Could Save<br />
 										</a></h2>
-									<p>Pancreatic cancer remains one of the most lethal malignancies, with a five-year survival rate lingering below 10%. This dismal prognosis is largely attributed to the disease’s asymptomatic nature in early stages and the absence of effective early detection methods. Recognizing this critical gap, the LaserBlood project emerges as a beacon of hope, aiming to revolutionize pancreatic cancer diagnosis through innovative biophotonic technologies. Here, we summarize our three-part series on pancreatic cancer and the urgent need for an early detection method - LaserBlood.</p>
+									<p>Despite the staggering ~€7 billion annual cost of pancreatic cancer in Europe, most of it stems from treating late-stage disease. Early detection could dramatically reduce both healthcare and productivity losses – transforming a medical challenge into an economic opportunity – but could also offer the chance to ease the profound social toll on patients and families - LaserBlood.</p>
 								</header>
-								<a href="https://www.laserblood.eu/pancreatic-cancer-the-three-part-series-in-summary/" class="image main"><img src="images/Pancreatic cancer_wrap up.png" alt="" /></a>
+								<a href="https://www.laserblood.eu/pancreatic-cancer-the-hidden-cost-of-late-diagnosis-and-what-early-detection-could-save/" class="image main"><img src="images/Economic and social impact of pancreatic cancer.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://www.laserblood.eu/pancreatic-cancer-the-three-part-series-in-summary/" class="button large">Full Story</a></li>
+									<li><a href="https://www.laserblood.eu/pancreatic-cancer-the-hidden-cost-of-late-diagnosis-and-what-early-detection-could-save/" class="button large">Full Story</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>
+										<span class="date">May 9, 2025</span>
+										<h2><a href="https://www.laserblood.eu/pancreatic-cancer-the-three-part-series-in-summary/">Pancreatic Cancer: The Three-Part Series in Summary<br />
+										</a></h2>
+									</header>
+									<a href="https://www.laserblood.eu/pancreatic-cancer-the-three-part-series-in-summary/" class="image fit"><img src="images/Pancreatic cancer_wrap up copy.png" alt="" /></a>
+									<p>Pancreatic cancer remains one of the most lethal malignancies, with a five-year survival rate lingering below 10%. This dismal prognosis is largely attributed to the disease’s asymptomatic nature in early stages and the absence of effective early detection methods. Recognizing this critical gap, the LaserBlood project emerges as a beacon of hope, aiming to revolutionize pancreatic cancer diagnosis through innovative biophotonic technologies. Here, we summarize our three-part series on pancreatic cancer and the urgent need for an early detection method - LaserBlood.</p>
+									<ul class="actions special">
+										<li><a href="https://www.laserblood.eu/pancreatic-cancer-the-three-part-series-in-summary/" class="button">Full Story</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<span class="date">April 23, 2025</span>
