--- a/generic.html
+++ b/generic.html
@@ -52,19 +52,31 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">June 8, 2025</span>
-										<h2><a href="https://www.laserblood.eu/pancreatic-cancer-the-hidden-cost-of-late-diagnosis-and-what-early-detection-could-save/">Pancreatic Cancer: The Hidden Cost of Late Diagnosis – and What Early Detection Could Save<br />
+									<span class="date">July 28, 2025</span>
+										<h2><a href="https://www.laserblood.eu/when-molecules-light-up-what-is-fluorescence-1-4/">When Molecules Light Up: What is Fluorescence? (1/4)<br />
 										</a></h2>
-									<p>Despite the staggering ~€7 billion annual cost of pancreatic cancer in Europe, most of it stems from treating late-stage disease. Early detection could dramatically reduce both healthcare and productivity losses – transforming a medical challenge into an economic opportunity – but could also offer the chance to ease the profound social toll on patients and families - LaserBlood.</p>
+									<p>From glowing jellyfish to fluorescent minerals, light emission after energy absorption — known as fluorescence — reveals hidden properties of both the biological and physical world. In this first article of our four-part series, we explore what fluorescence is, how it works, and where it naturally occurs - LaserBlood.</p>
 								</header>
-								<a href="https://www.laserblood.eu/pancreatic-cancer-the-hidden-cost-of-late-diagnosis-and-what-early-detection-could-save/" class="image main"><img src="images/Economic and social impact of pancreatic cancer.png" alt="" /></a>
+								<a href="https://www.laserblood.eu/when-molecules-light-up-what-is-fluorescence-1-4/" class="image main"><img src="images/Fluorescence.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://www.laserblood.eu/pancreatic-cancer-the-hidden-cost-of-late-diagnosis-and-what-early-detection-could-save/" class="button large">Full Story</a></li>
+									<li><a href="https://www.laserblood.eu/when-molecules-light-up-what-is-fluorescence-1-4/" class="button large">Full Story</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>
+										<span class="date">June 8, 2025</span>
+										<h2><a href="https://www.laserblood.eu/pancreatic-cancer-the-hidden-cost-of-late-diagnosis-and-what-early-detection-could-save/">Pancreatic Cancer: The Hidden Cost of Late Diagnosis – and What Early Detection Could Save<br />
+										</a></h2>
+									</header>
+									<a href="https://www.laserblood.eu/pancreatic-cancer-the-hidden-cost-of-late-diagnosis-and-what-early-detection-could-save/" class="image fit"><img src="images/Economic and social impact of pancreatic cancer.png" alt="" /></a>
+									<p>Despite the staggering ~€7 billion annual cost of pancreatic cancer in Europe, most of it stems from treating late-stage disease. Early detection could dramatically reduce both healthcare and productivity losses – transforming a medical challenge into an economic opportunity – but could also offer the chance to ease the profound social toll on patients and families - LaserBlood.</p>
+									<ul class="actions special">
+										<li><a href="https://www.laserblood.eu/pancreatic-cancer-the-hidden-cost-of-late-diagnosis-and-what-early-detection-could-save/" class="button">Full Story</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<span class="date">May 9, 2025</span>
