--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Sustainability</a></li>
 							<li><a href="generic.html">Flim Labs</a></li>
-							<li><a href="generic2.html">TV reports</a></li>
+							<li><a href="page2.html">Canale 21</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.instagram.com/_federicocitterich_/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
@@ -438,3 +438,4 @@
 
 	</body>
 </html>
+
