--- a/page2.html
+++ b/page2.html
@@ -22,7 +22,7 @@
 						<h1>Federico Citterich Portfolio<br />
 						</h1>
 						<p>Federico Citterich is a Rome-based science journalist and communicator who focuses on climate change,
-							 sustainability, and biodiversity. He currently works as a TV journalist at <a href="https://www.tvdream.net/web-tv/canale21-extra/" >Canale 21</a> and as a science communicator at <a href="https://www.flimlabs.com/?gad_source=1&gad_campaignid=17689004387&gbraid=0AAAAACeJKNfBQqbpBY1dExJD3p88ekSJm&gclid=Cj0KCQjww-HABhCGARIsALLO6XwThbcrykqoSDtCZIMz85IaQOmL8ST9gwci9YEiqc0GvhvQVIDuI8waAurQEALw_wcB" >FLIM LABS</a>. He also collaborates with the <a href="https://www.isp.cnr.it/index.php/it/" >Institute of Polar Sciences</a> of the Italian National Research Council, with which he took part in a research expedition to the North Pole in September 2024. In addition, he contributes as a freelance science journalist to various Italian and international outlets, including L'Osservatore Romano, Vatican News, Onyx, and Newsweek.
+							 sustainability, and biodiversity. He currently works as a TV journalist at <a href="https://www.tvdream.net/web-tv/canale21-extra/" >Canale 21</a> and as a science communicator at <a href="https://www.flimlabs.com/?gad_source=1&gad_campaignid=17689004387&gbraid=0AAAAACeJKNfBQqbpBY1dExJD3p88ekSJm&gclid=Cj0KCQjww-HABhCGARIsALLO6XwThbcrykqoSDtCZIMz85IaQOmL8ST9gwci9YEiqc0GvhvQVIDuI8waAurQEALw_wcB" >FLIM LABS</a>. He also collaborates with the <a href="https://www.isp.cnr.it/index.php/it/" >Institute of Polar Sciences</a> of the Italian National Research Council, with which he took part in two research expeditions to the North Pole (September 2024 and July 2025). In addition, he contributes as a freelance science journalist to various Italian and international outlets, including L'Osservatore Romano, Vatican News, Onyx, and Newsweek.
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -36,8 +36,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Articles</a></li>
-							<li><a href="generic.html">TV reports</a></li>
+							<li><a href="index.html">Sustainability</a></li>
+							<li><a href="generic.html">Flim Labs</a></li>
+							<li class="active"><a href="page2.html">Canale 21</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.instagram.com/_federicocitterich_/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
@@ -54,94 +55,91 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">February 26, 2025</span>
-										<h2><a href="https://www.laserblood.eu/enhancing-cancer-research-and-detection-by-tracking-metabolic-activity-the-emergence-of-fluorescence-lifetime-analysis/">Enhancing Cancer Research and Detection by Tracking Metabolic Activity: The Emergence of Fluorescence Lifetime Analysis<br />
+										<span class="date">August 1, 2025</span>
+										<h2><a href="https://www.youtube.com/watch?v=vg4VrA7eWpA">VG21 CONDUZIONE, SERVIZIO, COLLEGAMENTO BIODIVERSITÀ<br />
 										</a></h2>
 									</header>
-									<a href="https://www.laserblood.eu/enhancing-cancer-research-and-detection-by-tracking-metabolic-activity-the-emergence-of-fluorescence-lifetime-analysis/" class="image fit"><img src="images/Metabolic2.png" alt="" /></a>
-									<p>Cancer cells exhibit altered metabolic activity, enhancing glycolysis over oxidative phosphorylation. By tracking these metabolic changes, fluorescence lifetime imaging (FLIM) emerges as a powerful tool for improving tumor identification and surgical precision, offering new possibilities for enhanced cancer detection and treatment - LaserBlood.</p>
+									<a href="https://www.youtube.com/watch?v=vg4VrA7eWpA" class="image fit"><img src="images/VG21 CONDUZIONE.png" alt="" /></a>
+									<p></p>
 									<ul class="actions special">
-										<li><a href="https://www.laserblood.eu/enhancing-cancer-research-and-detection-by-tracking-metabolic-activity-the-emergence-of-fluorescence-lifetime-analysis/" class="button">Full Story</a></li>
+										<li><a href="https://www.youtube.com/watch?v=vg4VrA7eWpA" class="button">Link</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">February 5, 2025</span>
-										<h2><a href="https://www.vaticannews.va/en/world/news/2025-02/world-wetlands-day-plastic-pollution-study.html">World Wetlands Day: Saving our common home, one ecosystem at a time<br />
+										<span class="date">July 3, 2025</span>
+										<h2><a href="https://www.youtube.com/watch?v=VmnS7YKnZFE">VG21 - MUSEO DELLA SCIENZA, CONSEGNATO IL PROGETTO<br />
 										</a></h2>
 									</header>
-									<a href="https://www.vaticannews.va/en/world/news/2025-02/world-wetlands-day-plastic-pollution-study.html" class="image fit"><img src="images/Wetlands.jpeg" alt="" /></a>
-									<p>World Wetlands Day, marked annually on 2 February, aims to raise awareness regarding the importance of these ecosystems that contribute to biodiversity, climate mitigation and adaptation, freshwater availability, world economies and more. A recent study highlights the delicate ecological balance of wetlands and the growing threat posed by plastic pollution - Vatican News.</p>
+									<a href="https://www.youtube.com/watch?v=VmnS7YKnZFE" class="image fit"><img src="images/MUSEO SCIENZA.png" alt="" /></a>
+									<p></p>
 									<ul class="actions special">
-										<li><a href="https://www.vaticannews.va/en/world/news/2025-02/world-wetlands-day-plastic-pollution-study.html" class="button">Full Story</a></li>
+										<li><a href="https://www.youtube.com/watch?v=VmnS7YKnZFE" class="button">Link</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 8, 2025</span>
-										<h2><a href="https://www.laserblood.eu/italy-launches-pancreas-units-to-tackle-rising-pancreatic-cancer-crisis/">Italy Launches Pancreas Units to Tackle Rising Pancreatic Cancer Crisis<br />
+										<span class="date">June 23, 2025</span>
+										<h2><a href="https://www.youtube.com/watch?v=VZlnkVigr7g">VG21 - EMERGENZA CLIMA, FARA' SEMPRE PIU' CALDO<br />
 										</a></h2>
 									</header>
-									<a href="https://www.laserblood.eu/italy-launches-pancreas-units-to-tackle-rising-pancreatic-cancer-crisis/" class="image fit"><img src="images/Pancreas.png" alt="" /></a>
-									<p>A national network of Pancreas Units is taking shape in Italy to tackle the growing burden of pancreatic cancer – an initiative that underscores the importance of early diagnosis, at the heart of the Italy-born LaserBlood project - LaserBlood.</p>
+									<a href="https://www.youtube.com/watch?v=VZlnkVigr7g" class="image fit"><img src="images/EMERGENZA CLIMA.png" alt="" /></a>
+									<p></p>
 									<ul class="actions special">
-										<li><a href="https://www.laserblood.eu/italy-launches-pancreas-units-to-tackle-rising-pancreatic-cancer-crisis/" class="button">Full Story</a></li>
+										<li><a href="https://www.youtube.com/watch?v=VZlnkVigr7g" class="button">Link</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">March 30, 2025</span>
-										<h2><a href="https://www.onyxnewsroom.com/could-trumps-tariff-plans-prove-good-for-the-environment/">Could Trump’s tariffs prove good for the environment?<br />
+										<span class="date">June 18, 2025</span>
+										<h2><a href="https://www.youtube.com/watch?v=x2v5Bg8xyqk">VG21 CONDUZIONE - MUTO BIODIVERSITA'<br />
 										</a></h2>
 									</header>
-									<a href="https://www.onyxnewsroom.com/could-trumps-tariff-plans-prove-good-for-the-environment/" class="image fit"><img src="images/Trump.png.webp" alt="" /></a>
-									<p>US tariffs on imports will impact the shipping and fast fashion industries, two of the major contributors to greenhouse gas emissions - Onyx.</p>
+									<a href="https://www.youtube.com/watch?v=x2v5Bg8xyqk" class="image fit"><img src="images/BIODIVERSITA'.png" alt="" /></a>
+									<p></p>
 									<ul class="actions special">
-										<li><a href="https://www.onyxnewsroom.com/could-trumps-tariff-plans-prove-good-for-the-environment/" class="button">Full Story</a></li>
+										<li><a href="https://www.youtube.com/watch?v=x2v5Bg8xyqk" class="button">Link</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">March 27, 2025</span>
-										<h2><a href="https://www.laserblood.eu/pancreatic-cancer-why-are-early-detection-methods-still-absent-in-2025-2-3-2/">Pancreatic Cancer: Why Are Early Detection Methods Still Absent in 2025?<br />
+										<span class="date">June 9, 2025</span>
+										<h2><a href="https://www.youtube.com/watch?v=vkgm9BcZ2MM">VG21 CONDUZIONE - TITOLI E INTRODUZIONE<br />
 										</a></h2>
 									</header>
-									<a href="https://www.laserblood.eu/pancreatic-cancer-why-are-early-detection-methods-still-absent-in-2025-2-3-2/" class="image fit"><img src="images/Laserblood2.png" alt="" /></a>
-									<p>Pancreatic cancer only shows symptoms in advanced stages, yet early detection methods are still absent. What efforts have been made so far, and why haven’t they been successful? - LaserBlood.</p>
+									<a href="https://www.youtube.com/watch?v=vkgm9BcZ2MM" class="image fit"><img src="images/VG21 TITOLI.png" alt="" /></a>
+									<p></p>
 									<ul class="actions special">
-										<li><a href="https://www.laserblood.eu/pancreatic-cancer-why-are-early-detection-methods-still-absent-in-2025-2-3-2/" class="button">Full Story</a></li>
+										<li><a href="https://www.youtube.com/watch?v=vkgm9BcZ2MM" class="button">Link</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">March 24, 2025</span>
-										<h2><a href="https://www.onyxnewsroom.com/microplastics-a-hidden-peril-for-the-arctic/">Microplastics: A Hidden Peril for the Arctic<br />
+										<span class="date">June 2, 2025</span>
+										<h2><a href="https://www.youtube.com/watch?v=mgSGV5hqSLI">VG21 CONDUZIONE - TITOLI E INTRODUZIONE<br />
 										</a></h2>
 									</header>
-									<a href="https://www.onyxnewsroom.com/microplastics-a-hidden-peril-for-the-arctic/" class="image fit"><img src="images/Northern Fulnar.jpg" alt="" /></a>
-									<p>Tiny pieces of plastic get transported by winds and oceanic currents to the Arctic. How damaging are they to this fragile ecosystem? - Onyx.</p>
+									<a href="https://www.youtube.com/watch?v=mgSGV5hqSLI" class="image fit"><img src="images/VG21 FREDDO.png" alt="" /></a>
+									<p></p>
 									<ul class="actions special">
-										<li><a href="https://www.onyxnewsroom.com/microplastics-a-hidden-peril-for-the-arctic/" class="button">Full Story</a></li>
+										<li><a href="https://www.youtube.com/watch?v=mgSGV5hqSLI" class="button">Link</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">May 1, 2025</span>
+										<h2><a href="https://www.youtube.com/watch?v=VvJhk2ZVMvo">VG21 - IL PIANO DELLA REGIONE CONTRO LA PLASTICA NEI FIUMI<br />
+										</a></h2>
+									</header>
+									<a href="https://www.youtube.com/watch?v=VvJhk2ZVMvo" class="image fit"><img src="images/PLASTICA.png" alt="" /></a>
+									<p></p>
+									<ul class="actions special">
+										<li><a href="https://www.youtube.com/watch?v=VvJhk2ZVMvo" class="button">Link</a></li>
 									</ul>
 								</article>
 							</section>
 
-						<!-- Footer -->
-							<footer>
-								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="index.html" class="page">1</a>
-									<a href="page2.html" class="page active">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
-								</div>
-							</footer>
-
-					</div>
+						
 
 				<!-- Footer -->
 					<footer id="footer">
