--- a/page2.html
+++ b/page2.html
@@ -128,7 +128,7 @@
 								<article>
 									<header>
 										<span class="date">May 1, 2025</span>
-										<h2><a href="https://www.youtube.com/watch?v=VvJhk2ZVMvo">VG21 - IL PIANO DELLA REGIONE CONTRO LA PLASTICA NEI FIUMI<br />
+										<h2><a href="https://www.youtube.com/watch?v=VvJhk2ZVMvo">VG21 - LA REGIONE CONTRO LA PLASTICA NEI FIUMI<br />
 										</a></h2>
 									</header>
 									<a href="https://www.youtube.com/watch?v=VvJhk2ZVMvo" class="image fit"><img src="images/PLASTICA.png" alt="" /></a>
