--- a/page2.html
+++ b/page2.html
@@ -56,7 +56,7 @@
 								<article>
 									<header>
 										<span class="date">August 1, 2025</span>
-										<h2><a href="https://www.youtube.com/watch?v=vg4VrA7eWpA">VG21 CONDUZIONE, SERVIZIO, COLLEGAMENTO BIODIVERSITA'<br />
+										<h2><a href="https://www.youtube.com/watch?v=vg4VrA7eWpA">VG21 CONDUZIONE, SERVIZIO, COLL. BIODIVERSITA'<br />
 										</a></h2>
 									</header>
 									<a href="https://www.youtube.com/watch?v=vg4VrA7eWpA" class="image fit"><img src="images/VG21 CONDUZIONE.png" alt="" /></a>
