--- a/index.html
+++ b/index.html
@@ -52,19 +52,31 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 30, 2025</span>
-									<h2><a href="https://www.vaticannews.va/en/pope/news/2025-04/pope-francis-a-voice-for-our-common-home.html">Pope Francis: A Voice for Our Common Home
+									<span class="date">July 3, 2025</span>
+									<h2><a href="https://d.newsweek.com/en/file/478271/new-destinations-global-travel-tourism-leaders-2025.pdf">New Destinations - Global Travel & Tourism Leaders 2025
 									</a></h2>
-									<p>Pope Francis brought ethical urgency to the climate crisis by addressing its human and social consequences, building on the legacy of John Paul II and Benedict XVI - Vatican News.</p>
+									<p>Travel is changing, and the industry is adapting to satisfy a generation seeking authenticity, quality, and sustainable experiences in new destinations. To take the temperature in travel and gauge where the momentum is headed, I contributed to interviewing 71 top executives from around the world. Their verdict is clear: travel is booming once again, but the landscape has changed forever. We examine the rise of low-cost flights, online travel agents and the return of business travel. As we share these leaders' insights within this special report, buckle up and enjoy the ride! - Newsweek</p>
 								</header>
-								<a href="https://www.vaticannews.va/en/pope/news/2025-04/pope-francis-a-voice-for-our-common-home.html" class="image main"><img src="images/Pope Francis.jpeg" alt="" /></a>
+								<a href="https://d.newsweek.com/en/file/478271/new-destinations-global-travel-tourism-leaders-2025.pdf" class="image main"><img src="images/New Destinations.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://www.vaticannews.va/en/pope/news/2025-04/pope-francis-a-voice-for-our-common-home.html" class="button large">Full Story</a></li>
+									<li><a href="https://d.newsweek.com/en/file/478271/new-destinations-global-travel-tourism-leaders-2025.pdf" class="button large">Link to Report</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>
+										<span class="date">April 30, 2025</span>
+										<h2><a href="https://www.vaticannews.va/en/pope/news/2025-04/pope-francis-a-voice-for-our-common-home.html">Pope Francis: A Voice for Our Common Home<br />
+										</a></h2>
+									</header>
+									<a href="https://www.vaticannews.va/en/pope/news/2025-04/pope-francis-a-voice-for-our-common-home.html" class="image fit"><img src="images/Pope Francis.jpeg" alt="" /></a>
+									<p>Pope Francis brought ethical urgency to the climate crisis by addressing its human and social consequences, building on the legacy of John Paul II and Benedict XVI - Vatican News.</p>
+									<ul class="actions special">
+										<li><a href="https://www.vaticannews.va/en/pope/news/2025-04/pope-francis-a-voice-for-our-common-home.html" class="button">Full Story</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<span class="date">April 27, 2025</span>
@@ -438,4 +450,5 @@
 
 	</body>
 </html>
+
 
