--- a/generic.html
+++ b/generic.html
@@ -39,6 +39,7 @@
 							<li><a href="index.html">Sustainability</a></li>
 							<li class="active"><a href="generic.html">Flim Labs</a></li>
 							<li><a href="page2.html">Canale 21</a></li>
+							<li><a href="elements.html">Scientific Publications</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.instagram.com/_federicocitterich_/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
@@ -208,4 +209,5 @@
 
 	</body>
 </html>
+
 
