--- a/page2.html
+++ b/page2.html
@@ -56,6 +56,30 @@
 							<section class="posts">
 								<article>
 									<header>
+										<span class="date">September 9, 2025</span>
+										<h2><a href="https://www.youtube.com/watch?v=GebyEXsr_GA&t=6s">VG21 COLLEGAMENTO Dott.ssa BARBARA BARBARO <br />
+										</a></h2>
+									</header>
+									<a href="https://www.youtube.com/watch?v=GebyEXsr_GA&t=6s" class="image fit"><img src="images/Collegamento Dott.ssa Barbaro.png" alt="" /></a>
+									<p></p>
+									<ul class="actions special">
+										<li><a href="https://www.youtube.com/watch?v=GebyEXsr_GA&t=6s" class="button">Link</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">September 9, 2025</span>
+										<h2><a href="https://www.youtube.com/watch?v=SgElQTg0pvk">VG21 CONDUZIONE - TITOLI E INTRODUZIONE <br />
+										</a></h2>
+									</header>
+									<a href="https://www.youtube.com/watch?v=SgElQTg0pvk" class="image fit"><img src="images/Titoli 09:09:25.png" alt="" /></a>
+									<p></p>
+									<ul class="actions special">
+										<li><a href="https://www.youtube.com/watch?v=SgElQTg0pvk" class="button">Link</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<span class="date">August 1, 2025</span>
 										<h2><a href="https://www.youtube.com/watch?v=vg4VrA7eWpA">VG21 CONDUZIONE, SERVIZIO, COLL. BIODIVERSITA'<br />
 										</a></h2>
