--- a/page2.html
+++ b/page2.html
@@ -57,13 +57,13 @@
 								<article>
 									<header>
 										<span class="date">September 9, 2025</span>
-										<h2><a href="https://www.youtube.com/watch?v=GebyEXsr_GA&t=6s">VG21 COLLEGAMENTO Dott.ssa BARBARA BARBARO <br />
+										<h2><a href="https://www.youtube.com/watch?v=GebyEXsr_GA">VG21 COLLEGAMENTO Dott.ssa BARBARA BARBARO <br />
 										</a></h2>
 									</header>
-									<a href="https://www.youtube.com/watch?v=GebyEXsr_GA&t=6s" class="image fit"><img src="images/Collegamento Dott.ssa Barbaro.png" alt="" /></a>
+									<a href="https://www.youtube.com/watch?v=GebyEXsr_GA" class="image fit"><img src="images/Collegamento Dott.ssa Barbaro.png" alt="" /></a>
 									<p></p>
 									<ul class="actions special">
-										<li><a href="https://www.youtube.com/watch?v=GebyEXsr_GA&t=6s" class="button">Link</a></li>
+										<li><a href="https://www.youtube.com/watch?v=GebyEXsr_GA" class="button">Link</a></li>
 									</ul>
 								</article>
 								<article>
