--- a/page2.html
+++ b/page2.html
@@ -56,6 +56,18 @@
 							<section class="posts">
 								<article>
 									<header>
+										<span class="date">September 22, 2025</span>
+										<h2><a href="https://www.youtube.com/watch?v=cnrgk5b4eSI">VG21 DIRETTA MANIFESTAZIONI GAZA <br />
+										</a></h2>
+									</header>
+									<a href="https://www.youtube.com/watch?v=cnrgk5b4eSI" class="image fit"><img src="images/GAZA.png" alt="" /></a>
+									<p></p>
+									<ul class="actions special">
+										<li><a href="https://www.youtube.com/watch?v=cnrgk5b4eSI" class="button">Link</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<span class="date">September 9, 2025</span>
 										<h2><a href="https://www.youtube.com/watch?v=GebyEXsr_GA">VG21 COLLEGAMENTO Dott.ssa BARBARA BARBARO <br />
 										</a></h2>
