--- a/page2.html
+++ b/page2.html
@@ -56,6 +56,18 @@
 							<section class="posts">
 								<article>
 									<header>
+										<span class="date">September 30, 2025</span>
+										<h2><a href="https://www.youtube.com/watch?v=sIcnXU9ToLw">VG21 COLLEGAMENTO DAVIDE TAUROZZI - BIOLOGO <br />
+										</a></h2>
+									</header>
+									<a href="https://www.youtube.com/watch?v=sIcnXU9ToLw" class="image fit"><img src="images/davide.png" alt="" /></a>
+									<p></p>
+									<ul class="actions special">
+										<li><a href="https://www.youtube.com/watch?v=sIcnXU9ToLw" class="button">Link</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<span class="date">September 26, 2025</span>
 										<h2><a href="https://www.youtube.com/watch?v=-0t3Id0YC2M">VG21 - DECESSI PER TUMORI, NEL 2050 AUMENTO DEL 75% <br />
 										</a></h2>
