--- a/generic.html
+++ b/generic.html
@@ -53,19 +53,31 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">July 28, 2025</span>
-										<h2><a href="https://www.laserblood.eu/when-molecules-light-up-what-is-fluorescence-1-4/">When Molecules Light Up: What is Fluorescence? (1/4)<br />
+									<span class="date">October 24, 2025</span>
+										<h2><a href="https://www.laserblood.eu/when-molecules-light-up-laser-induced-fluorescence-in-cancer-care-2-4/">When Molecules Light Up: Laser-induced Fluorescence in Cancer Care (2/4)<br />
 										</a></h2>
-									<p>From glowing jellyfish to fluorescent minerals, light emission after energy absorption — known as fluorescence — reveals hidden properties of both the biological and physical world. In this first article of our four-part series, we explore what fluorescence is, how it works, and where it naturally occurs - LaserBlood.</p>
+									<p>Laser-induced fluorescence reveals hidden details within tissues by making invisible structures visible through light emission. In this article, we explore the principles behind laser-induced fluorescence and its applications in cancer detection and surgery. By combining theory with clinical practice, we show how this spectroscopic method is transforming oncology. - LaserBlood.</p>
 								</header>
-								<a href="https://www.laserblood.eu/when-molecules-light-up-what-is-fluorescence-1-4/" class="image main"><img src="images/Fluorescence.png" alt="" /></a>
+								<a href="https://www.laserblood.eu/when-molecules-light-up-laser-induced-fluorescence-in-cancer-care-2-4/" class="image main"><img src="images/Fluorescent tumor.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://www.laserblood.eu/when-molecules-light-up-what-is-fluorescence-1-4/" class="button large">Full Story</a></li>
+									<li><a href="https://www.laserblood.eu/when-molecules-light-up-laser-induced-fluorescence-in-cancer-care-2-4/" class="button large">Full Story</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>
+										<span class="date">July 28, 2025</span>
+										<h2><a href="https://www.laserblood.eu/when-molecules-light-up-what-is-fluorescence-1-4/">When Molecules Light Up: What is Fluorescence? (1/4)<br />
+										</a></h2>
+									</header>
+									<a href="https://www.laserblood.eu/when-molecules-light-up-what-is-fluorescence-1-4/" class="image fit"><img src="images/Fluorescence.png" alt="" /></a>
+									<p>From glowing jellyfish to fluorescent minerals, light emission after energy absorption — known as fluorescence — reveals hidden properties of both the biological and physical world. In this first article of our four-part series, we explore what fluorescence is, how it works, and where it naturally occurs - LaserBlood.</p>
+									<ul class="actions special">
+										<li><a href="https://www.laserblood.eu/when-molecules-light-up-what-is-fluorescence-1-4/" class="button">Full Story</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<span class="date">June 8, 2025</span>
@@ -209,5 +221,6 @@
 
 	</body>
 </html>
+
 
 
