--- a/page2.html
+++ b/page2.html
@@ -56,6 +56,18 @@
 							<section class="posts">
 								<article>
 									<header>
+										<span class="date">October 30, 2025</span>
+										<h2><a href="https://www.youtube.com/watch?v=8lOxvXe-dec">VG21, IL PIANO DA 100MLN PER UNA CAPITALE PIU' VERDE <br />
+										</a></h2>
+									</header>
+									<a href="https://www.youtube.com/watch?v=8lOxvXe-dec" class="image fit"><img src="images/CAPITALE VERDE" alt="" /></a>
+									<p></p>
+									<ul class="actions special">
+										<li><a href="https://www.youtube.com/watch?v=8lOxvXe-dec" class="button">Link</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<span class="date">September 30, 2025</span>
 										<h2><a href="https://www.youtube.com/watch?v=sIcnXU9ToLw">VG21 COLLEGAMENTO DAVIDE TAUROZZI - BIOLOGO <br />
 										</a></h2>
