--- a/page2.html
+++ b/page2.html
@@ -57,7 +57,7 @@
 								<article>
 									<header>
 										<span class="date">October 30, 2025</span>
-										<h2><a href="https://www.youtube.com/watch?v=8lOxvXe-dec">VG21, IL PIANO DA 100MLN PER UNA CAPITALE PIU' VERDE <br />
+										<h2><a href="https://www.youtube.com/watch?v=8lOxvXe-dec">VG21 - IL PIANO DA 100MLN PER UNA CAPITALE PIU' VERDE <br />
 										</a></h2>
 									</header>
 									<a href="https://www.youtube.com/watch?v=8lOxvXe-dec" class="image fit"><img src="images/CAPITALE VERDE" alt="" /></a>
