--- a/page2.html
+++ b/page2.html
@@ -60,7 +60,7 @@
 										<h2><a href="https://www.youtube.com/watch?v=8lOxvXe-dec">VG21 - IL PIANO DA 100MLN PER UNA CAPITALE PIU' VERDE <br />
 										</a></h2>
 									</header>
-									<a href="https://www.youtube.com/watch?v=8lOxvXe-dec" class="image fit"><img src="images/CAPITALE VERDE" alt="" /></a>
+									<a href="https://www.youtube.com/watch?v=8lOxvXe-dec" class="image fit"><img src="images/CAPITALE VERDE.png" alt="" /></a>
 									<p></p>
 									<ul class="actions special">
 										<li><a href="https://www.youtube.com/watch?v=8lOxvXe-dec" class="button">Link</a></li>
