--- a/page2.html
+++ b/page2.html
@@ -56,6 +56,18 @@
 							<section class="posts">
 								<article>
 									<header>
+										<span class="date">November 19, 2025</span>
+										<h2><a href="https://www.youtube.com/watch?v=c_B3T6KYR4s">VG21 - UN NUOVO DOCUMENTO PER I GLIOMI DI BASSO GRADO IDH MUTATI <br />
+										</a></h2>
+									</header>
+									<a href="https://www.youtube.com/watch?v=c_B3T6KYR4s" class="image fit"><img src="images/Gliomi.png" alt="" /></a>
+									<p></p>
+									<ul class="actions special">
+										<li><a href="https://www.youtube.com/watch?v=c_B3T6KYR4s" class="button">Link</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<span class="date">October 29, 2025</span>
 										<h2><a href="https://www.youtube.com/watch?v=8lOxvXe-dec">VG21 - IL PIANO DA 100MLN PER UNA CAPITALE PIU' VERDE <br />
 										</a></h2>
