--- a/page2.html
+++ b/page2.html
@@ -57,7 +57,7 @@
 								<article>
 									<header>
 										<span class="date">November 19, 2025</span>
-										<h2><a href="https://www.youtube.com/watch?v=c_B3T6KYR4s">UN NUOVO DOCUMENTO PER I GLIOMI DI BASSO GRADO IDH MUTATI <br />
+										<h2><a href="https://www.youtube.com/watch?v=c_B3T6KYR4s">VG21 - DOCUMENTO PER I GLIOMI DI BASSO GRADO IDH MUTATI <br />
 										</a></h2>
 									</header>
 									<a href="https://www.youtube.com/watch?v=c_B3T6KYR4s" class="image fit"><img src="images/Gliomi.png" alt="" /></a>
