--- a/page2.html
+++ b/page2.html
@@ -56,6 +56,30 @@
 							<section class="posts">
 								<article>
 									<header>
+										<span class="date">November 25, 2025</span>
+										<h2><a href="https://www.youtube.com/watch?v=Axjdj7rCzkM">VG21 - GIOVANI E CAMBIAMENTO CLIMATICO, L'INCONTRO WWF <br />
+										</a></h2>
+									</header>
+									<a href="https://www.youtube.com/watch?v=Axjdj7rCzkM" class="image fit"><img src="images/WWF.png" alt="" /></a>
+									<p></p>
+									<ul class="actions special">
+										<li><a href="https://www.youtube.com/watch?v=Axjdj7rCzkM" class="button">Link</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">November 24, 2025</span>
+										<h2><a href="https://www.youtube.com/watch?v=tB-WDT5E32Y">VG21 - COLLEGAMENTO PROF. MERCADANTE (IRE) <br />
+										</a></h2>
+									</header>
+									<a href="https://www.youtube.com/watch?v=tB-WDT5E32Y" class="image fit"><img src="images/MERCADANTE.png" alt="" /></a>
+									<p></p>
+									<ul class="actions special">
+										<li><a href="https://www.youtube.com/watch?v=tB-WDT5E32Y" class="button">Link</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<span class="date">November 19, 2025</span>
 										<h2><a href="https://www.youtube.com/watch?v=c_B3T6KYR4s">VG21 - I GLIOMI DI BASSO GRADO IDH MUTATI <br />
 										</a></h2>
