--- a/page2.html
+++ b/page2.html
@@ -57,7 +57,7 @@
 								<article>
 									<header>
 										<span class="date">November 25, 2025</span>
-										<h2><a href="https://www.youtube.com/watch?v=Axjdj7rCzkM">VG21 - GIOVANI E CAMBIAMENTO, L'INCONTRO WWF <br />
+										<h2><a href="https://www.youtube.com/watch?v=Axjdj7rCzkM">VG21 - GIOVANI E CLIMA, L'INCONTRO WWF <br />
 										</a></h2>
 									</header>
 									<a href="https://www.youtube.com/watch?v=Axjdj7rCzkM" class="image fit"><img src="images/WWF.png" alt="" /></a>
