--- a/generic.html
+++ b/generic.html
@@ -53,19 +53,31 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">October 24, 2025</span>
-										<h2><a href="https://www.laserblood.eu/when-molecules-light-up-laser-induced-fluorescence-in-cancer-care-2-4/">When Molecules Light Up: Laser-induced Fluorescence in Cancer Care (2/4)<br />
+									<span class="date">December 2, 2025</span>
+										<h2><a href="https://www.laserblood.eu/when-molecules-light-up-the-measurable-properties-of-fluorescence-3-4/">When Molecules Light Up: The Measurable Properties of Fluorescence (3/4)<br />
 										</a></h2>
-									<p>Laser-induced fluorescence reveals hidden details within tissues by making invisible structures visible through light emission. In this article, we explore the principles behind laser-induced fluorescence and its applications in cancer detection and surgery. By combining theory with clinical practice, we show how this spectroscopic method is transforming oncology. - LaserBlood.</p>
+									<p>Fluorescence is rich with measurable properties that reveal how molecules absorb, transform, and release energy. In this article, we explore the optical signatures that shape every fluorescent signal – from brightness and color to energy shifts, efficiency, and molecular motion. By uncovering these properties, we learn how fluorescence becomes not just light, but a powerful analytical tool in biomedicine and beyond - LaserBlood.</p>
 								</header>
-								<a href="https://www.laserblood.eu/when-molecules-light-up-laser-induced-fluorescence-in-cancer-care-2-4/" class="image main"><img src="images/Fluorescent tumor.png" alt="" /></a>
+								<a href="https://www.laserblood.eu/when-molecules-light-up-the-measurable-properties-of-fluorescence-3-4/" class="image main"><img src="images/Properties.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://www.laserblood.eu/when-molecules-light-up-laser-induced-fluorescence-in-cancer-care-2-4/" class="button large">Full Story</a></li>
+									<li><a href="https://www.laserblood.eu/when-molecules-light-up-the-measurable-properties-of-fluorescence-3-4/" class="button large">Full Story</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>
+										<span class="date">October 24, 2025</span>
+										<h2><a href="https://www.laserblood.eu/when-molecules-light-up-laser-induced-fluorescence-in-cancer-care-2-4/">When Molecules Light Up: Laser-induced Fluorescence in Cancer Care (2/4)<br />
+										</a></h2>
+									</header>
+									<a href="https://www.laserblood.eu/when-molecules-light-up-laser-induced-fluorescence-in-cancer-care-2-4/" class="image fit"><img src="images/Fluorescent tumor.png" alt="" /></a>
+									<p>Laser-induced fluorescence reveals hidden details within tissues by making invisible structures visible through light emission. In this article, we explore the principles behind laser-induced fluorescence and its applications in cancer detection and surgery. By combining theory with clinical practice, we show how this spectroscopic method is transforming oncology - LaserBlood.</p>
+									<ul class="actions special">
+										<li><a href="https://www.laserblood.eu/when-molecules-light-up-laser-induced-fluorescence-in-cancer-care-2-4/" class="button">Full Story</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<span class="date">July 28, 2025</span>
@@ -221,6 +233,7 @@
 
 	</body>
 </html>
+
 
 
 
