--- a/page2.html
+++ b/page2.html
@@ -56,6 +56,18 @@
 							<section class="posts">
 								<article>
 									<header>
+										<span class="date">December 22, 2025</span>
+										<h2><a href="https://www.youtube.com/watch?v=ai-x8iCYeWk">VG21 - ROMA CAMBIA PELLE, AL VIA IL PIANO DEL VERDE <br />
+										</a></h2>
+									</header>
+									<a href="https://www.youtube.com/watch?v=ai-x8iCYeWk" class="image fit"><img src="images/VERDE.png" alt="" /></a>
+									<p></p>
+									<ul class="actions special">
+										<li><a href="https://www.youtube.com/watch?v=ai-x8iCYeWk" class="button">Link</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<span class="date">November 25, 2025</span>
 										<h2><a href="https://www.youtube.com/watch?v=Axjdj7rCzkM">VG21 - GIOVANI E CLIMA, L'INCONTRO WWF <br />
 										</a></h2>
